# hydra-tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md  flake.nix
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md
hydra-cli/: Cargo.toml  README.md
hydra-cli/src/: main.rs
hydra-mail/: CLAUDE.md  Cargo.toml  INSTALLATION.md  PERFORMANCE.md  README.md
hydra-mail/.claude-plugin/: README.md  plugin.json
hydra-mail/.claude-plugin/skills/hydra-mail/: SKILL.md
hydra-mail/benches/: channels.rs
hydra-mail/docs/: ARCHITECTURE.md  SPEC.md
hydra-mail/skills/: hydra-mail.yaml
hydra-mail/src/: channels.rs  config.rs  constants.rs  lib.rs  main.rs  message_log.rs  schema.rs  toon.rs
hydra-mail/tests/: crash_recovery_test.rs  integration_test.rs
hydra-observer/: Cargo.toml  README.md
hydra-observer/docs/: SPEC.md
hydra-observer/src/: app.rs  config.rs  hydra_provider.rs  lib.rs  main.rs
hydra-observer/src/input/: commands.rs  global_shortcut.rs  kwin_window_picker.rs  mod.rs  portal_drag.rs  tmux_monitor.rs
hydra-observer/src/platform/: mod.rs
hydra-observer/src/platform/wayland/: mod.rs
hydra-observer/src/platform/x11/: mod.rs
hydra-observer/src/renderer/: context.rs  mod.rs  pipeline.rs  shader.wgsl  uniforms.rs
hydra-orchestrator/: Cargo.toml  README.md
hydra-orchestrator/src/: config.rs  lib.rs  mail.rs  session.rs  store.rs  tmux.rs
hydra-wt/: CLAUDE.md  Cargo.toml  README.md
hydra-wt/src/: artifacts.rs  config.rs  hooks.rs  hydra.rs  lib.rs  main.rs  ports.rs  template.rs  worktree.rs
hydralph/: README.md  hydralph.sh  prompt.md
src/: channels.rs  config.rs  lib.rs  main.rs
tests/: integration_test.rs
