[package]
name = "hydra-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "net", "io-util", "macros", "test-util"] }
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toon-format = "1.5"
base64 = "0.22"

[dependencies.sled]
version = "0.34"
optional = true

[features]
default = []
durable = ["sled"]

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "deny"
