[package]
name = "hydra-observer"
version = "0.1.0"
edition = "2021"
description = "Animated Claude overlay that follows cursor and reacts to terminals"

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime (for IPC socket)
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "net", "io-util", "macros", "signal"] }

# Graphics
wgpu = "24"
glam = "0.29"

# Windowing with layer-shell support (SergioRibera's fork)
winit = { version = "0.30.5", git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }

# Still need smithay-client-toolkit for layer-shell types re-exported by winit
smithay-client-toolkit = { version = "0.19", default-features = false }

# X11 (optional fallback)
x11rb = { version = "0.13", features = ["composite", "xinput", "render"], optional = true }

# Utilities
rand = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pollster = "0.4"

[features]
default = ["wayland", "x11"]
wayland = []
x11 = ["dep:x11rb"]

[lints.rust]
# Need unsafe for raw window handles
unsafe_code = "warn"
