[package]
name = "hydra-observer"
version = "0.1.0"
edition = "2021"
description = "HydraMail integration for Mascots desktop companion"

[dependencies]
# Core mascots functionality (will be published to crates.io eventually)
mascots = { git = "https://github.com/0xPD33/mascots" }

# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for HydraMail IPC)
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "net", "io-util", "macros"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "warn"
