[package]
name = "hydra-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "process", "time", "io-util", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
toml = "0.8"
base64 = "0.22"
toon-format = "0.4"

# For worktree integration (optional - can use without)
hydra-wt = { path = "../hydra-wt", optional = true }

[features]
default = []
worktree = ["hydra-wt"]
