[package]
name = "hydra-wt"
version = "0.1.0"
edition = "2021"
description = "Worktree management for the Hydra ecosystem"
license = "MIT"

[lib]
name = "hydra_wt"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
